<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FRC Scouter Toolbox</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_data_input">Data Input</string>
    <string name="title_activity_ranking_config">Configure Weights</string>
    <string name="title_activity_match_list">Match List</string>
    <string name="criteria_A">Auto High</string>
    <string name="criteria_B">Auto Low</string>
    <string name="criteria_C">Tele-Op High</string>
    <string name="criteria_D">Tele-Op Low</string>
    <string name="criteria_E">Throw</string>
    <string name="criteria_F">Catches</string>
    <string name="criteria_AW">Auto High</string>
    <string name="criteria_BW">Auto Low</string>
    <string name="criteria_CW">Tele-Op High Weight</string>
    <string name="criteria_DW">Tele-Op Low Weight</string>
    <string name="criteria_EW">Throw Weight</string>
    <string name="criteria_FW">Catch Weight</string>
    <string name="title_activity_team_detail">Team Detail</string>
    <string name="title_activity_team_list">Team List</string>
    <string name="clear_warning">To clear all entries, go to Settings -> Applications -> FRC Scouting Toolkit then click clear data.
    This can be hard. That is intentional so that it is not done accidentally.</string>
    <string name="cancel"> Cancel </string>
    <string name="clear_confirm"> Clear all data. </string>
    <string name="no_teams">No Teams Recorded</string>
    <string name="no_matches">No Matches Recorded</string>
    <string name="confirm">Confirm</string>

</resources>
